[package]
name = "nightly"
version = "0.1.0"
edition = "2015"
description = "proc-macro for nightly conditional tokens"
license = "MIT"
repository = "https://github.com/npmccallum/nightly"
homepage = "https://github.com/npmccallum/nightly"
documentation = "https://docs.rs/nightly"
keywords = ["nightly", "proc-macro", "compatibility"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"
authors = ["Nathaniel McCallum <nathaniel@mccallum.life>"]
rust-version = "1.53"
exclude = [
    ".github/",
    "target/"
]

[lib]
proc-macro = true

[features]
nightly = []
