[package]
name = "daywalker"
version = "1.0.0"
edition = "2021"
description = "proc-macro for nightly conditional tokens"
license = "MIT"
repository = "https://github.com/npmccallum/daywalker"
homepage = "https://github.com/npmccallum/daywalker"
documentation = "https://docs.rs/daywalker"
keywords = ["nightly", "proc-macro", "compatibility"]
categories = ["development-tools::procedural-macro-helpers"]
readme = "README.md"
authors = ["Nathaniel McCallum <nathaniel@mccallum.life>"]
rust-version = "1.56"
exclude = [
    ".github/",
    "target/"
]

[lib]
proc-macro = true

[features]
nightly = []
